--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,17 +1,40 @@
-jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
-#jdbc.url=jdbc:oracle:thin:@(description=(address_list= (address=(host=30.200.0.70) (protocol=tcp)(port=1521))(address=(host=30.200.0.71)(protocol=tcp) (port=1521)) (load_balance=yes)(failover=yes))(connect_data=(service_name= orcl)))
-jdbc.url=jdbc:oracle:thin:@192.168.1.14:1521:orcl
-jdbc.username=ZTSX
-##jdbc.username=wasu
-jdbc.password=ZTSX1234
-##jdbc.password=wasu1234
+# JDBC Configuration
+#MySQL
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/bidb?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull
+jdbc.username=root
+jdbc.password=123456
 
+#Oracle
+#jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
+#jdbc.url=jdbc:oracle:thin:@192.168.1.14:1521:orcl
+#jdbc.username=ZTSX
+#jdbc.password=ZTSX1234
+
+#DB2
+#jdbc.driverClassName=com.ibm.db2.jcc.DB2Driver
+#jdbc.url=jdbc:db2://32.137.32.94:60000/EDWDB
+#jdbc.username=edw
+#jdbc.password=edw123
+
+
+# DBCP Pool settings
 cpool.checkoutTimeout=5000
-
 cpool.minPoolSize=2
 cpool.maxPoolSize=5
-
 cpool.maxIdleTime=7200
 cpool.maxIdleTimeExcessConnections=1800
 cpool.acquireIncrement=10
+
+# DBCP Pool settings
+jdbc.initialSize=5
+jdbc.maxActive=10
+jdbc.maxIdle=5
+jdbc.maxWait=30000
+jdbc.validationQuery=VALUES 1
+
+#JNDI
+jndi.name=java:comp/env/jdbc/Datasource_MDMS
+jndi.enabled=false
+
 
