--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,10 @@
       <groupId>org.apache.struts</groupId>
       <artifactId>struts2-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.struts</groupId>
+      <artifactId>struts2-spring-plugin</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>net.sf.ehcache</groupId>
