--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,9 +1,9 @@
 # JDBC Configuration
 #MySQL
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/bidb?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull
-jdbc.username=root
-jdbc.password=123456
+#jdbc.driverClassName=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://localhost:3306/bidb?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull
+#jdbc.username=root
+#jdbc.password=123456
 
 #Oracle
 #jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
@@ -12,26 +12,26 @@ jdbc.password=123456
 #jdbc.password=ZTSX1234
 
 #DB2
-#jdbc.driverClassName=com.ibm.db2.jcc.DB2Driver
-#jdbc.url=jdbc:db2://32.137.32.94:60000/EDWDB
-#jdbc.username=edw
-#jdbc.password=edw123
+jdbc.driverClassName=com.ibm.db2.jcc.DB2Driver
+jdbc.url=jdbc:db2://32.137.32.94:60000/EDWDB
+jdbc.username=edw
+jdbc.password=edw123
 
 
 # DBCP Pool settings
-cpool.checkoutTimeout=5000
-cpool.minPoolSize=2
-cpool.maxPoolSize=5
-cpool.maxIdleTime=7200
-cpool.maxIdleTimeExcessConnections=1800
-cpool.acquireIncrement=10
+pool.initialSize=5
+pool.maxActive=10
+pool.maxIdle=5
+pool.maxWait=30000
+pool.validationQuery=VALUES 1
 
-# DBCP Pool settings
-jdbc.initialSize=5
-jdbc.maxActive=10
-jdbc.maxIdle=5
-jdbc.maxWait=30000
-jdbc.validationQuery=VALUES 1
+pool.checkoutTimeout=5000
+pool.minPoolSize=2
+pool.maxPoolSize=5
+pool.maxIdleTime=7200
+pool.maxIdleTimeExcessConnections=1800
+pool.acquireIncrement=10
+
 
 #JNDI
 jndi.name=java:comp/env/jdbc/Datasource_MDMS
