--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,9 +1,9 @@
 # JDBC Configuration
 #MySQL
-#jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://localhost:3306/bidb?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull
-#jdbc.username=root
-#jdbc.password=123456
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/bioffice?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull
+jdbc.username=root
+jdbc.password=123456
 
 #Oracle
 #jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
@@ -12,10 +12,10 @@
 #jdbc.password=ZTSX1234
 
 #DB2
-jdbc.driverClassName=com.ibm.db2.jcc.DB2Driver
-jdbc.url=jdbc:db2://32.137.32.94:60000/EDWDB
-jdbc.username=edw
-jdbc.password=edw123
+#jdbc.driverClassName=com.ibm.db2.jcc.DB2Driver
+#jdbc.url=jdbc:db2://32.137.32.94:60000/EDWDB
+#jdbc.username=edw
+#jdbc.password=edw123
 
 
 # DBCP Pool settings
