--- a/pom.xml
+++ b/pom.xml
@@ -116,13 +116,13 @@
     <!--  Spring  -->
     <dependency>
       <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-web</artifactId>
+      <artifactId>spring</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>quartz</groupId>
+      <artifactId>quartz</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.aspectj</groupId>
