--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,20 @@
 
     <plugins>
 
+      <!-- Jetty 插件 -->
+      <plugin>
+        <groupId>org.mortbay.jetty</groupId>
+        <artifactId>jetty-maven-plugin</artifactId>
+        <configuration>
+          <connectors>
+            <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+              <port>8080</port>
+              <maxIdleTime>60000</maxIdleTime>
+            </connector>
+          </connectors>
+        </configuration>
+      </plugin>
+      
       <!-- Tomcat 插件 -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -118,6 +132,11 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring</artifactId>
     </dependency>
+    <dependency>
+      <groupId>aopalliance</groupId>
+      <artifactId>aopalliance</artifactId>
+    </dependency>
+
 
     <dependency>
       <groupId>quartz</groupId>
@@ -139,10 +158,6 @@
       <groupId>org.apache.struts</groupId>
       <artifactId>struts2-core</artifactId>
     </dependency>
-    <dependency>
-      <groupId>org.apache.struts</groupId>
-      <artifactId>struts2-spring-plugin</artifactId>
-    </dependency>
 
     <dependency>
       <groupId>org.json</groupId>
@@ -150,7 +165,7 @@
     </dependency>
 
     <dependency>
-      <groupId>jfreechart</groupId>
+      <groupId>jfree</groupId> 
       <artifactId>jfreechart</artifactId>
     </dependency>
 
@@ -160,11 +175,26 @@
       <version>1.2</version>
     </dependency>
 
+    <!--
+    <dependency>
+      <groupId>cglib</groupId>
+      <artifactId>cglib</artifactId>
+      <version>2.0.2</version>
+    </dependency>
+    -->
+
+    <!-- 公式运算  -->
+    <dependency>
+      <groupId>commons-jexl</groupId>
+      <artifactId>commons-jexl</artifactId>
+    </dependency>
+
 
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
+
   </dependencies>
 
 
