--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.soak</groupId>
-  <artifactId>epl-edw-web</artifactId>
+  <artifactId>edw</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
 
@@ -119,12 +119,16 @@
 
     <!-- 依赖工程 -->
     <dependency>
-      <groupId>com.soak.framework</groupId>
-      <artifactId>epl-platform-framework</artifactId>
+      <groupId>com.soak</groupId>
+      <artifactId>framework</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.soak.common</groupId>
-      <artifactId>epl-platform-common</artifactId>
+      <groupId>com.soak</groupId>
+      <artifactId>common</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.soak</groupId>
+      <artifactId>etl</artifactId>
     </dependency>
 
     <!--  Spring  -->
@@ -160,10 +164,11 @@
     </dependency>
 
     <dependency>
-      <groupId>org.json</groupId>
-      <artifactId>json</artifactId>
+      <groupId>net.sf.json-lib</groupId>
+      <artifactId>json-lib</artifactId>
+      <classifier>jdk15</classifier>
     </dependency>
-
+      
     <dependency>
       <groupId>jfree</groupId> 
       <artifactId>jfreechart</artifactId>
