--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
 
   <dependencies>
 
-    <!--  -->
+    <!-- Servlet & Jsp  -->
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
