--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,11 @@
 
     <!-- DB Driver End  -->
 
+    <dependency>
+      <groupId>commons-beanutils</groupId>
+      <artifactId>commons-beanutils</artifactId>
+    </dependency>
+
     <!-- excel start -->
     <dependency>
       <groupId>org.apache.poi</groupId>
@@ -177,13 +182,24 @@
     <!--  Spring  -->
     <dependency>
       <groupId>org.springframework</groupId>
-      <artifactId>spring</artifactId>
+      <artifactId>spring-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>aopalliance</groupId>
-      <artifactId>aopalliance</artifactId>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
     </dependency>
-
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context-support</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-tx</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>quartz</groupId>
@@ -206,11 +222,19 @@
       <artifactId>struts2-core</artifactId>
     </dependency>
 
+
+
+    <!-- JSON Start -->
     <dependency>
-      <groupId>net.sf.json-lib</groupId>
-      <artifactId>json-lib</artifactId>
-      <classifier>jdk15</classifier>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-core-asl</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-mapper-asl</artifactId>
+    </dependency>
+    <!-- JSON End -->
+
 
     <dependency>
       <groupId>jfree</groupId>
@@ -220,7 +244,8 @@
     <dependency>
       <groupId>net.sf.ehcache</groupId>
       <artifactId>ehcache</artifactId>
-      <version>1.2</version>
+      <version>1.7.2</version>
+      <type>pom</type>
     </dependency>
 
     <!--
