--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,15 +25,20 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
-  <!-- Spring监听器 -->
+
+  <!-- 应用 监听  -->
   <listener>
-    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    <listener-class>com.kindustry.framework.listener.ApplicationListener</listener-class>
   </listener>
+  
 
   <!-- 防止Spring内存溢出监听器 -->
   <listener>
     <listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
   </listener>
+
+
+
 
   <!-- Spring MVC servlet -->
   <servlet>
