--- a/pom.xml
+++ b/pom.xml
@@ -144,7 +144,7 @@
     </dependency>
     <!-- PostgreSQL -->
     <dependency>
-      <groupId>postgresql</groupId>
+      <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
     </dependency>
     <!-- DB Driver End  -->
