--- a/src/main/resources/properties/jdbc.properties
+++ b/src/main/resources/properties/jdbc.properties
@@ -1,15 +1,18 @@
 # JDBC Configuration
 #PostgreSQL
 jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost/postgres?searchpath=attendance
+jdbc.url=jdbc:postgresql://localhost/cashier?searchpath=public
 jdbc.username=postgres
 jdbc.password=123456
+pool.validationQuery=SELECT 1
+
 
 #MySQL
 #jdbc.driverClassName=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://localhost:3306/attendance?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull
 #jdbc.username=root
 #jdbc.password=123456
+#pool.validationQuery=VALUES 1
 
 #Oracle
 #jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
@@ -22,6 +25,7 @@ jdbc.password=123456
 #jdbc.url=jdbc:db2://32.137.126.170:60000/EDWDB
 #jdbc.username=edw
 #jdbc.password=edw123
+#pool.validationQuery=VALUES 1
 
 # DBCP Pool settings
 #\u5b9a\u4e49\u521d\u59cb\u8fde\u63a5\u6570  
@@ -34,7 +38,7 @@ pool.maxIdle=5
 pool.minIdle=1  
 #\u5b9a\u4e49\u6700\u957f\u7b49\u5f85\u65f6\u95f4  
 pool.maxWait=30000
-pool.validationQuery=VALUES 1
+
 
 pool.checkoutTimeout=5000
 pool.minPoolSize=2
