--- a/src/main/resources/properties/jdbc.properties
+++ b/src/main/resources/properties/jdbc.properties
@@ -12,7 +12,7 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/attendance?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull
 jdbc.username=root
 jdbc.password=123456
-pool.validationQuery=VALUES 1
+pool.validationQuery=SELECT 1
 
 #Oracle
 #jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
