--- a/src/main/resources/properties/jdbc.properties
+++ b/src/main/resources/properties/jdbc.properties
@@ -10,6 +10,8 @@
 #MySQL
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/attendance?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull
+#jdbc:mysql://localhost:3306/attendance?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT
+#jdbc:mysql://localhost:3306/attendance?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull
 jdbc.username=root
 jdbc.password=123456
 pool.validationQuery=SELECT 1
