--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,19 @@
       </plugin>
 
 
-
+      <!-- Tomcat 插件 -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>tomcat-maven-plugin</artifactId>
+        <configuration>
+          <url>http://localhost:8080/manager/html</url>  <!-- tomcat管理路径 -->
+          <server>tomcat</server>  <!-- 与settings.xml文件中server的id相同 -->
+          <username>admin</username>
+          <password>admin</password>
+          <path>/</path>
+          <update>true</update>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
