--- a/src/main/resources/properties/jdbc.properties
+++ b/src/main/resources/properties/jdbc.properties
@@ -1,21 +1,21 @@
 # JDBC Configuration
 #PostgreSQL
-#jdbc.driverClassName=org.postgresql.Driver
+jdbc.driverClassName=org.postgresql.Driver
 #jdbc.url=jdbc:postgresql://192.168.0.105/cashier?searchpath=public
-#jdbc.url=jdbc:postgresql://localhost/cashier?searchpath=public
-#jdbc.username=postgres
-#jdbc.password=postgres
-#pool.validationQuery=SELECT 1
+jdbc.url=jdbc:postgresql://localhost/cashier?searchpath=public
+jdbc.username=postgres
+jdbc.password=postgres
+pool.validationQuery=SELECT 1
 
 
 #MySQL
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/attendance?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull
+#jdbc.driverClassName=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://localhost:3306/attendance?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull
 #jdbc:mysql://localhost:3306/attendance?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT
 #jdbc:mysql://localhost:3306/attendance?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull
-jdbc.username=root
-jdbc.password=123456
-pool.validationQuery=SELECT 1
+#jdbc.username=root
+#jdbc.password=123456
+#pool.validationQuery=SELECT 1
 
 #Oracle
 #jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
