--- a/pom.xml
+++ b/pom.xml
@@ -132,12 +132,12 @@
     </dependency>
     <!-- DB Driver End -->
 
-    <!-- HikariCP -->
+    <!-- HikariCP 数据库连接池 -->
     <dependency>
       <groupId>com.zaxxer</groupId>
       <artifactId>HikariCP</artifactId>
     </dependency>
-    <!-- 导入dbcp的jar包，用来在applicationContext.xml中配置数据库 -->
+    <!-- dbcp 数据库连接池 -->
     <dependency>
       <groupId>commons-dbcp</groupId>
       <artifactId>commons-dbcp</artifactId>
