--- a/pom.xml
+++ b/pom.xml
@@ -55,27 +55,20 @@
       </plugin>
 
 
+      <!-- jetty:run plugin -->
+      <plugin>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-maven-plugin</artifactId>
+      </plugin>
+
       <!-- JBoss deploy plugin -->
       <plugin>
         <groupId>org.wildfly.plugins</groupId>
         <artifactId>wildfly-maven-plugin</artifactId>
       </plugin>
-
-
-      <!-- Tomcat deploy plugin -->
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>tomcat-maven-plugin</artifactId>
-        <configuration>
-          <url>http://localhost:8080/manager/text</url>  <!-- tomcat管理路径 -->
-          <server>tomcat</server>  <!-- 与settings.xml文件中server的id相同 -->
-          <username>admin</username>
-          <password>passwd</password>
-          <path>/cashier</path>
-          <update>true</update>
-        </configuration>
-      </plugin>
+      
     </plugins>
+    
   </build>
 
 
