--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
         <artifactId>wildfly-maven-plugin</artifactId>
       </plugin>
       
+      
+      <!-- tomcat:run plugin -->
+      <plugin>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+      </plugin>
+            
     </plugins>
     
   </build>
